# chatbot_conversation

./: .env.example  .gitattributes  .gitignore  4_way_example.py  4_way_oo.py  README.md  config.json  environment.yml  logging.conf  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup_codex_env.sh
config/: aliens.config.json  apocalypse.config.json  art.config.json  churchill.config.json  config.json  crypto.config.json  dummy.config.json  immortal.config.json  logging.conf  robots.config.json  scifi.config.json  shakespeare.config.json  turingtest.config.json
config/examples/: 20questions.config.json  aliens.config.json  apocalypse.config.json  art.config.json  attention.config.json  brexit.config.json  caeser.config.json  chess.config.json  churchill.config.json  conscious.config.json  crypto.config.json  dummy.config.json  immortal.config.json  mars.config.json  music.config.json  robots.config.json  scifi.config.json  shakespeare.config.json  story.config.json  tennis.config.json  timetravel.config.json  turingtest.config.json
newtests/: conftest.py
newtests/test_src/test_chatbot_conversation/test_models/: test_base.py
newtests/test_src/test_chatbot_conversation/test_models/test_bots/: conftest.py  test_dummy_bot.py
output/: tennis.transcript_250203_070315.md
output/examples/: brexit.transcript_250112_111207.md  churchill.transcript_250112_110658.md  churchill.transcript_250116_082903.md  dummy.transcript_250112_111856.md  dummy.transcript_250116_083601.md  tennis.transcript_250112_111705.md  tennis.transcript_250116_082529.md
src/chatbot_conversation/: __init__.py  error.py  main.py
src/chatbot_conversation/conversation/: __init__.py  bots_initializer.py  display.py  loader.py  manager.py  prompt.py  transcript.py
src/chatbot_conversation/conversation/display/: __init__.py  abstract_display.py  rich_display.py
src/chatbot_conversation/models/: __init__.py  base.py  bot_config.py  bot_registry.py  bot_types.py  claude_bot.py  factory.py  gemini_bot.py  ollama_bot.py  openai_bot.py
src/chatbot_conversation/models/bots/: __init__.py  claude_bot.py  dummy_bot.py  gemini_bot.py  gpt_bot.py  ollama_bot.py  openai_bot.py
src/chatbot_conversation/utils/: __init__.py  dir_util.py  edit_config.py  env.py  exceptions.py  logging_util.py
src/conversation/: __init__.py  loader.py  manager.py
src/models/: __init__.py  base.py  claude_bot.py  factory.py  gemini_bot.py  ollama_bot.py  openai_bot.py
src/utils/: env.py  logging_util.py
tests/: __init__.py  conftest.py
tests/config/: test_config.json  test_config_empty.json
tests/fixtures/: test_config.json  test_config_empty.json
tests/test_conversation/: conftest.py  test_manager.py
tests/test_models/: __init__.py  conftest.py  test_base.py  test_bot_temperature.py  test_claude_bot.py  test_factory.py  test_gemini_bot.py  test_gpt_bot.py  test_ollama_bot.py  test_openai_bot.py
tests/test_src/test_chatbot_conversation/: conftest.py  test_main.py  test_version.py
tests/test_src/test_chatbot_conversation/test_conversation/: conftest.py  test_bots_initializer.py  test_display.py  test_loader.py  test_manager.py  test_prompt.py  test_transcript.py
tests/test_src/test_chatbot_conversation/test_conversation/test_display/: conftest.py  test_display.py
tests/test_src/test_chatbot_conversation/test_models/: conftest.py  test_base.py  test_bot_registry.py  test_factory.py
tests/test_src/test_chatbot_conversation/test_models/test_bots/: conftest.py  test_bots_shared.py  test_claude_bot.py  test_dummy_bot.py  test_gemini_bot.py  test_gpt_bot.py  test_ollama_bot.py
tests/test_src/test_chatbot_conversation/test_utils/: conftest.py  test_dir_util.py  test_edit_config.py  test_env.py  test_logging_util.py
